fix: fixed layout issues with loading skeleton card and panel components.

--- a/src/components/panel/panel.css
+++ b/src/components/panel/panel.css
@@ -23,25 +23,33 @@
 
 #calendar-widget > .widget-layout .result-panel-wrapper .loader-wrapper {
   width: 100%;
-  display: grid;
-  place-content: center;
-}
-
-#calendar-widget > .widget-layout .loader-wrapper > div {
-  width: 100%;
   display: flex;
-  flex-wrap: wrap;
-  padding: 32px;
+  justify-content: center;
 }
 
 #calendar-widget > .widget-layout .loader-wrapper .skeleton-card-wrapper {
-  width: 248px;
-  height: 320px;
+  width: 232px;
+  height: 400px;
   margin: 0px 8px 32px 8px;
   padding: 16px;
   box-shadow: var(--primary-box-shadow);
   border-radius: lg;
   background-color: var(--primary-white-opaque);
+}
+
+#calendar-widget > .widget-layout .loader-wrapper > div {
+  display: grid;
+  justify-content: center;
+  gap: 8px;
+  grid-template-columns: 1fr;
+  justify-items: center;
+}
+
+@media (min-width: 820px) and (max-width: 1060px) {
+  #calendar-widget > .widget-layout .loader-wrapper > div {
+    padding: 0px;
+    grid-template-columns: repeat(3, 246px);
+  }
 }
 
 @media (max-width: 550px) {
@@ -52,5 +60,23 @@
 
   #calendar-widget > .widget-layout .loader-wrapper > div {
     padding: 0px;
+    grid-template-columns: repeat(1, 246px);
+  }
+}
+
+@media (min-width: 550px) and (max-width: 820px) {
+  #calendar-widget > .widget-layout .loader-wrapper {
+    max-width: 500px;
+  }
+
+  #calendar-widget > .widget-layout .loader-wrapper > div {
+    padding: 0px;
+    grid-template-columns: repeat(2, 246px);
+  }
+}
+
+@media (min-width: 1060px) {
+  #calendar-widget > .widget-layout .loader-wrapper > div {
+    grid-template-columns: repeat(4, 246px);
   }
 }
